fix header visibility

--- a/app/imports/stylesheets/main.less
+++ b/app/imports/stylesheets/main.less
@@ -64,6 +64,7 @@ header {
 
       & > div {
         opacity: 0;
+        visibility: hidden;
       }
     }
 }
